feat: Initialize UMS project - Stage 1: Project boilerplate and configuration
- Add package.json with NestJS, Prisma, and PostgreSQL dependencies
- Configure TypeScript build settings
- Add NestJS CLI configuration
- Create .gitignore for Node/Prisma/Docker
- Add .dockerignore for optimized builds
- Include .env.example template

--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,13 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
 *.pem
+*.key
+*.crt
 
 # debug
 npm-debug.log*
@@ -34,3 +37,39 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/generated/prisma
+
+# ============================================
+# UMS Specific
+# ============================================
+
+# Logs
+logs/
+*.log
+
+# Uploads (runtime)
+uploads/*
+!uploads/.gitkeep
+
+# Backups
+backups/*.sql
+backups/*.sql.gz
+backups/*.dump
+
+# Docker volumes
+postgres_data/
+redis_data/
+
+# SSL Certificates (never commit private keys)
+nginx/ssl/*.pem
+nginx/ssl/*.key
+nginx/ssl/*.crt
+!nginx/ssl/.gitkeep
+
+# IDE
+.idea/
+.vscode/*
+!.vscode/settings.json
+*.swp
+*.swo
